chore: migrate Organization page to real table

--- a/src/pages/reference-js/organization/organization.mdx
+++ b/src/pages/reference-js/organization/organization.mdx
@@ -5,7 +5,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Organization
 
-This is a class that represents an organziation. It's returned from the [`createOrganization`](TODO) and [`getOrganization`](TODO) 
+This is a class that represents an organziation. It's returned from the [`createOrganization`](TODO) and [`getOrganization`](TODO)
 methods on [the `Clerk` class instance](TODO).
 
 ## Properties
@@ -30,26 +30,32 @@ methods on [the `Clerk` class instance](TODO).
 
 ## Methods
 
-
 ### `update()`
 
 ```typescript
-function update(params: UpdateOrganizationParams): Promise<OrganizationResource>;
+function update(params: UpdateOrganizationParams): Promise<Organization>;
 ```
 
 Updates an organization's attributes.
 
-**Parameters**
+#### `UpdateOrganizationParams`
 
-| Name | Type   | Description            |
-| ---- | ------ | ---------------------- |
-| name | string | The organization name. |
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
+  {cells: [ <code>name</code>, <code>string</code>, "The organization name."]},
+  {cells: [ <code>slug</code>, <code>string | undefined</code>, "The organization slug."]},
+  ]}
+/>
 
-**Returns**
+#### Returns
 
-| Type                          | Description                                                  |
-| ----------------------------- | ------------------------------------------------------------ |
-| {"Promise<OrganizationResource>"} | This method returns a `Promise` which resolves to an Organization. |
+<Tables
+  headings={["Type", "Description"]}
+  rows={[
+  {cells: [ <code>Promise{"<"}<a href="/reference-js/organization/organization">Organization</a>{">"}</code>, <>This method returns a <code>Promise</code> which resolves to an Organization.</>]},
+  ]}
+/>
 
 ### `destroy()`
 
@@ -61,29 +67,37 @@ Deletes the organization. Only administrators can delete an organization.
 
 Please note that deleting an organization will also delete all memberships and invitations. This is not reversible.
 
-**Returns**
+#### Returns
 
-| Type          | Description                                                  |
-| ------------- | ------------------------------------------------------------ |
-| {"Promise<void>"} | This method returns a `Promise` which doesn't resolve to any value. |
+<Tables
+  headings={["Type", "Description"]}
+  rows={[
+  {cells: [ <code>{"Promise<void>"}</code>, <>This method returns a <code>Promise</code> which doesn't resolve to any value.</>]},
+  ]}
+/>
 
 ### `setLogo()`
 
 ```typescript
-function setLogo(params: SetOrganizationLogoParams): Promise<OrganizationResource>;
+function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
 ```
 
 Sets or replaces an organization's logo.  Accept the logo as a file or blob. The logo must be an image and its  size cannot exceed 10MB.
 
-**Parameters**
+#### `SetOrganizationLogoParams`
 
-| Name | Type                 | Description                                                  |
-| ---- | -------------------- | ------------------------------------------------------------ |
-| file | File \| Blob \| null | An image file which cannot exceed 10MB. Passing `null` will delete the organization's current logo. |
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
+  {cells: [ <code>file</code>, <code>File | Blob | null</code>, <>An image file which cannot exceed 10MB. Passing <code>null</code> will delete the organization's current logo.</>]},
+  ]}
+/>
 
-**Returns**
+#### Returns
 
-| Type                          | Description                                                  |
-| ----------------------------- | ------------------------------------------------------------ |
-| {"Promise<OrganizationResource>"} | This method returns a `Promise` which resolves to an Organization. |
-
+<Tables
+  headings={["Type", "Description"]}
+  rows={[
+  {cells: [ <code>Promise{"<"}<a href="/reference-js/organization/organization">Organization</a>{">"}</code>, <>This method returns a <code>Promise</code> which resolves to an Organization.</>]},
+  ]}
+/>
