--- a/src/pages/reference-js/organization/members.mdx
+++ b/src/pages/reference-js/organization/members.mdx
@@ -1,88 +1,163 @@
+import { Tab, Tabs } from "nextra-theme-docs";
+import { Tables } from "@/components/Table";
+import { Images } from "@/components/Images";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
+
 # Organization Members
+
+These are all methods on [the Organization class](/reference-js/organization/organization) that allow you to manage the members of an organization.
 
 ## `getMemberships()`
 
 ```typescript
-function getMemberships(params?: GetMembershipsParams): Promise<OrganizationMembershipResource[]>;
+function getMemberships(params?: GetMembershipsParams): Promise<OrganizationMembership[]>;
 ```
 
-Retrieve the members of the selected 
+Retrieve the members of the selected
 
-**Parameters**
+### `GetMembershipsParams`
 
-| Name    | Type   | Description                                   |
-| ------- | ------ | --------------------------------------------- |
-| limit?  | number | Limit of the results returned.                |
-| offset? | number | The offset of results to start the retrieval. |
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
+  {cells: [
+  <code>limit</code>,
+  <code>number | undefined</code>,
+  "Limit of the results returned.",
+  ]},
+  {cells: [
+  <code>offset</code>,
+  <code>number | undefined</code>,
+  "The offset of results to start the retrieval.",
+  ]},
+  ]}
+/>
 
-**Returns**
+### Returns
 
-| Type                                    | Description                                                  |
-| --------------------------------------- | ------------------------------------------------------------ |
-| {"Promise<OrganizationMembershipResource>"} | This method returns a `Promise` which resolves with a list of `OrganizationMembershipResource` objects. |
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [
+  <code>Promise{"<"}OrganizationMembership[]{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves with a list of <code>OrganizationMembership</code> objects.</>,
+  ]},
+  ]}
+/>
 
 ## `addMember()`
 
 ```typescript
-function addMember(params: AddMemberParams): Promise<OrganizationMembershipResource>;
+function addMember(params: AddMemberParams): Promise<OrganizationMembership>;
 ```
 
 Adds a user as a member to an organization. A user can only be added to an organization if they are not already members of it and if they already exist in the same instance as the organization.
 
 Please note that only administrators can add members to an organization.
 
-**Parameters**
+### `AddMemberParams`
 
-| Name   | Type   | Description                                                  |
-| ------ | ------ | ------------------------------------------------------------ |
-| userId | string | The id of the user that will be added as a member to the organization. |
-| role   | string | The role that the user will have in the organization. Valid values are `admin` and `basic_member`. |
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [
+  <code>userId</code>,
+  <code>string</code>,
+  "The id of the user that will be added as a member to the organization.",
+  ]},
+  {cells: [
+  <code>role</code>,
+  <code>'admin' | 'basic_member' | 'guest_member'</code>,
+  <>The role that the user will have in the organization.</>,
+  ]},
+  ]}
+/>
 
-**Returns**
+### Returns
 
-| Type                                    | Description                                                  |
-| --------------------------------------- | ------------------------------------------------------------ |
-| {"Promise<OrganizationMembershipResource>"} | This method returns a `Promise` which resolves with a `OrganizationMembershipResource` object. |
-
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [
+  <code>Promise{"<"}OrganizationMembership{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves with the <code>OrganizationMembership</code> objects.</>,
+  ]},
+  ]}
+/>
 
 ## `updateMember()`
 
 ```typescript
-function updateMember(params: UpdateMembershipParams): Promise<OrganizationMembershipResource>;
+function updateMember(params: UpdateMembershipParams): Promise<OrganizationMembership>;
 ```
 
 Updates a member based on the *userId*. For now only role can be changed.
 
-**Parameters**
+### `UpdateMembershipParams`
 
-| Name   | Type           | Description                 |
-| ------ | -------------- | --------------------------- |
-| role   | MembershipRole | The role of the new member. |
-| userId | string         | The user identifier.        |
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [
+  <code>userId</code>,
+  <code>string</code>,
+  "The user identifier.",
+  ]},
+  {cells: [
+  <code>role</code>,
+  <code>'admin' | 'basic_member' | 'guest_member'</code>,
+  <>The role of the new member.</>,
+  ]},
+  ]}
+/>
 
-**Returns**
+### Returns
 
-| Type                          | Description                                                  |
-| ----------------------------- | ------------------------------------------------------------ |
-| {"Promise<OrganizationResource>"} | This method returns a `Promise` which resolves to an Organization. |
-
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [
+  <code>Promise{"<"}OrganizationMembership{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves with the updated <code>OrganizationMembership</code> object.</>,
+  ]},
+  ]}
+/>
 
 ## `removeMember()`
 
 ```typescript
-function removeMember(userId: string): Promise<OrganizationMembershipResource>;
+function removeMember(userId: string): Promise<OrganizationMembership>;
 ```
 
 Removes a member from the organization based on the userId.
 
-**Parameters**
+### Props
 
-| Name   | Type   | Description          |
-| ------ | ------ | -------------------- |
-| userId | string | The user identifier. |
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
+  {cells: [
+  <code>userId</code>,
+  <code>string</code>,
+  "The user identifier.",
+  ]},
+  ]}
+/>
 
-**Returns**
+### Returns
 
-| Type                                    | Description                                                  |
-| --------------------------------------- | ------------------------------------------------------------ |
-| {"Promise<OrganizationMembershipResource>"} | This method returns a `Promise` which resolves to the removed `OrganizationMembershipResource`. |
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [
+  <code>Promise{"<"}OrganizationMembership{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves with the removed <code>OrganizationMembership</code> object.</>,
+  ]},
+  ]}
+/>
