chore: migrate invitations page to use real tables

--- a/src/pages/reference-js/organization/invitations.mdx
+++ b/src/pages/reference-js/organization/invitations.mdx
@@ -1,3 +1,8 @@
+import { Tab, Tabs } from "nextra-theme-docs";
+import { Tables } from "@/components/Table";
+import { Images } from "@/components/Images";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
+
 # Organization Invitations
 
 ## `getPendingInvitations()`
@@ -8,19 +13,36 @@ function getPendingInvitations(params?: GetPendingInvitationsParams): Promise<Or
 
 Retrieve the members of the selected organization.
 
-**Parameters** 
+### `GetPendingInvitationsParams`
 
-| Name    | Type   | Description                                   |
-| ------- | ------ | --------------------------------------------- |
-| limit?  | number | Limit of the results returned.                |
-| offset? | number | The offset of results to start the retrieval. |
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
+  {cells: [
+  <code>limit</code>,
+  <code>number | undefined</code>,
+  "Limit of the results returned.",
+  ]},
+  {cells: [
+  <code>offset</code>,
+  <code>number | undefined</code>,
+  "The offset of results to start the retrieval.",
+  ]},
+  ]}
+/>
 
-**Returns**
+### Returns
 
-| Type                                    | Description                                                  |
-| --------------------------------------- | ------------------------------------------------------------ |
-| {"Promise<OrganizationMembershipResource>"} | This method returns a `Promise` which resolves with a list of `OrganizationMembershipResource` objects. |
-
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [
+  <code>Promise{"<"}OrganizationInvitationResource[]{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves with a list of <code>OrganizationInvitationResource</code> objects.</>,
+  ]},
+  ]}
+/>
 
 ## `inviteMember()`
 
@@ -30,20 +52,36 @@ function inviteMember(params: InviteMemberParams): Promise<OrganizationInvitatio
 
 Creates and sends an invitation to the target email address for becoming a member with the role passed on the  function parameters.
 
-**Parameters**
+### `InviteMemberParams`
 
-| Name         | Type           | Description                                                |
-| ------------ | -------------- | ---------------------------------------------------------- |
-| emailAddress | string         | The email address to invite.                               |
-| role         | MembershipRole | The role of the new member.                                |
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
+  {cells: [
+  <code>emailAddress</code>,
+  <code>string</code>,
+  "The email address to invite.",
+  ]},
+  {cells: [
+  <code>role</code>,
+  <code>'admin' | 'basic_member' | 'guest_member'</code>,
+  "The role of the new member.",
+  ]},
+  ]}
+/>
 
-**Returns**
+### Returns
 
-| Type                                    | Description                                                  |
-| --------------------------------------- | ------------------------------------------------------------ |
-| {"Promise<OrganizationMembershipResource>"} | This method returns a `Promise` which resolves to the `OrganizationInvitationResource` for the created invitation. |
-
-
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [
+  <code>Promise{"<"}OrganizationMembershipResource{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves to the <code>OrganizationInvitationResource</code> for the created invitation.</>,
+  ]},
+  ]}
+/>
 
 ## `inviteMembers()`
 
@@ -53,15 +91,33 @@ function inviteMembers(params: InviteMembersParams): Promise<OrganizationInvitat
 
 Creates and sends an invitation to the target email addresses for becoming a member with the role passed on the function parameters.
 
-**Parameters**
+### `InviteMembersParams`
 
-| Name         | Type           | Description                                                |
-| ------------ | -------------- | ---------------------------------------------------------- |
-| emailAddresses | string[]         | The email addresses to invite.                               |
-| role         | MembershipRole | The role of the new members.                                |
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
+  {cells: [
+  <code>emailAddresses</code>,
+  <code>string[]</code>,
+  "The email addresses to invite.",
+  ]},
+  {cells: [
+  <code>role</code>,
+  <code>'admin' | 'basic_member' | 'guest_member'</code>,
+  "The role of the new members.",
+  ]},
+  ]}
+/>
 
-**Returns**
+### Returns
 
-| Type                                    | Description                                                  |
-| --------------------------------------- | ------------------------------------------------------------ |
-| {"Promise<OrganizationMembershipResource[]>"} | This method returns a `Promise` which resolves to a list of `OrganizationInvitationResource`s for the created invitations. |
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [
+  <code>Promise{"<"}OrganizationMembershipResource[]{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves to a list of <code>OrganizationInvitationResource</code>s for the created invitations.</>,
+  ]},
+  ]}
+/>
