chore: add "Additional Methods" section to organization

--- a/src/pages/reference-js/organization/organization.mdx
+++ b/src/pages/reference-js/organization/organization.mdx
@@ -101,3 +101,20 @@ Sets or replaces an organization's logo.  Accept the logo as a file or blob. The
   {cells: [ <code>Promise{"<"}<a href="/reference-js/organization/organization">Organization</a>{">"}</code>, <>This method returns a <code>Promise</code> which resolves to an Organization.</>]},
   ]}
 />
+
+## Additional Methods
+
+In addition to the methods listed above, the `Organization` class also has the following methods:
+
+### Members
+
+*   [`getMemberships()`](/reference-js/organization/members#getmemberships)
+*   [`addMember()`](/reference-js/organization/members#addmember)
+*   [`updateMember()`](/reference-js/organization/members#updatemember)
+*   [`removeMember()`](/reference-js/organization/members#removemember)
+
+### Invitations
+
+*   [`getPendingInvitations()`](/reference-js/organization/invitations#getpendinginvitations)
+*   [`inviteMember()`](/reference-js/organization/invitations#invitemember)
+*   [`inviteMembers()`](/reference-js/organization/invitations#invitemembers)
