--- a/src/pages/reference-js/organization/invitations.mdx
+++ b/src/pages/reference-js/organization/invitations.mdx
@@ -5,6 +5,8 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Organization Invitations
 
+These are all methods on [the Organization class](/reference-js/organization/organization) that allow you to manage the invitations to an organization.
+
 ## `getPendingInvitations()`
 
 ```typescript
