chore: add organization invitation docs page

--- a/src/pages/reference-js/organization/invitations.mdx
+++ b/src/pages/reference-js/organization/invitations.mdx
@@ -10,7 +10,7 @@ These are all methods on [the Organization class](/reference-js/organization/org
 ## `getPendingInvitations()`
 
 ```typescript
-function getPendingInvitations(params?: GetPendingInvitationsParams): Promise<OrganizationInvitationResource[]>;
+function getPendingInvitations(params?: GetPendingInvitationsParams): Promise<OrganizationInvitation[]>;
 ```
 
 Retrieve the members of the selected organization.
@@ -40,8 +40,8 @@ Retrieve the members of the selected organization.
   headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
   {cells: [
-  <code>Promise{"<"}OrganizationInvitationResource[]{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves with a list of <code>OrganizationInvitationResource</code> objects.</>,
+  <code>Promise{"<"}<a href="/reference-js/organization-invitation">OrganizationInvitation</a>[]{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves with a list of <code><a href="/reference-js/organization-invitation">OrganizationInvitation</a></code> objects.</>,
   ]},
   ]}
 />
@@ -49,7 +49,7 @@ Retrieve the members of the selected organization.
 ## `inviteMember()`
 
 ```typescript
-function inviteMember(params: InviteMemberParams): Promise<OrganizationInvitationResource>;
+function inviteMember(params: InviteMemberParams): Promise<OrganizationInvitation>;
 ```
 
 Creates and sends an invitation to the target email address for becoming a member with the role passed on the  function parameters.
@@ -79,8 +79,8 @@ Creates and sends an invitation to the target email address for becoming a membe
   headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
   {cells: [
-  <code>Promise{"<"}OrganizationMembershipResource{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves to the <code>OrganizationInvitationResource</code> for the created invitation.</>,
+  <code>Promise{"<"}<a href="/reference-js/organization-invitation">OrganizationInvitation</a>{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves to the <code><a href="/reference-js/organization-invitation">OrganizationInvitation</a></code> for the created invitation.</>,
   ]},
   ]}
 />
@@ -88,7 +88,7 @@ Creates and sends an invitation to the target email address for becoming a membe
 ## `inviteMembers()`
 
 ```typescript
-function inviteMembers(params: InviteMembersParams): Promise<OrganizationInvitationResource[]>;
+function inviteMembers(params: InviteMembersParams): Promise<OrganizationInvitation[]>;
 ```
 
 Creates and sends an invitation to the target email addresses for becoming a member with the role passed on the function parameters.
@@ -118,8 +118,8 @@ Creates and sends an invitation to the target email addresses for becoming a mem
   headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
   {cells: [
-  <code>Promise{"<"}OrganizationMembershipResource[]{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves to a list of <code>OrganizationInvitationResource</code>s for the created invitations.</>,
+  <code>Promise{"<"}<a href="/reference-js/organization-invitation">OrganizationInvitation</a>[]{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves to a list of <code><a href="/reference-js/organization-invitation">OrganizationInvitation</a></code>s for the created invitations.</>,
   ]},
   ]}
 />
