chore: add public user data and organization membership docs

--- a/src/pages/reference-js/organization/members.mdx
+++ b/src/pages/reference-js/organization/members.mdx
@@ -40,8 +40,8 @@ Retrieve the members of the selected
   headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
   {cells: [
-  <code>Promise{"<"}OrganizationMembership[]{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves with a list of <code>OrganizationMembership</code> objects.</>,
+  <code>Promise{"<"}<a href="/reference-js/organization-membership">OrganizationMembership</a>[]{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves with a list of <code><a href="/reference-js/organization-membership">OrganizationMembership</a></code> objects.</>,
   ]},
   ]}
 />
@@ -82,8 +82,8 @@ Please note that only administrators can add members to an organization.
   headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
   {cells: [
-  <code>Promise{"<"}OrganizationMembership{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves with the <code>OrganizationMembership</code> objects.</>,
+  <code>Promise{"<"}<a href="/reference-js/organization-membership">OrganizationMembership</a>{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves with the <code><a href="/reference-js/organization-membership">OrganizationMembership</a></code> objects.</>,
   ]},
   ]}
 />
@@ -122,8 +122,8 @@ Updates a member based on the *userId*. For now only role can be changed.
   headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
   {cells: [
-  <code>Promise{"<"}OrganizationMembership{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves with the updated <code>OrganizationMembership</code> object.</>,
+  <code>Promise{"<"}<a href="/reference-js/organization-membership">OrganizationMembership</a>{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves with the updated <code><a href="/reference-js/organization-membership">OrganizationMembership</a></code> object.</>,
   ]},
   ]}
 />
@@ -156,8 +156,8 @@ Removes a member from the organization based on the userId.
   headingsMeta={[{}, {maxWidth: "300px"}]}
   rows={[
   {cells: [
-  <code>Promise{"<"}OrganizationMembership{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves with the removed <code>OrganizationMembership</code> object.</>,
+  <code>Promise{"<"}<a href="/reference-js/organization-membership">OrganizationMembership</a>{">"}</code>,
+  <>This method returns a <code>Promise</code> which resolves with the removed <code><a href="/reference-js/organization-membership">OrganizationMembership</a></code> object.</>,
   ]},
   ]}
 />
