--- a/src/pages/reference-js/organization-invitation.mdx
+++ b/src/pages/reference-js/organization-invitation.mdx
@@ -3,7 +3,7 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# OrganizationInvitation
+# `OrganizationInvitation`
 
 The `OrganizationInvitation` object is the model around an organization invitation.
 
@@ -11,6 +11,7 @@ The `OrganizationInvitation` object is the model around an organization invitati
 
 <Tables
   headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
   rows={[
     {cells: [
         <code>id</code>,
