chore: document more organization methods on the ClerkJS class

--- a/src/pages/reference-js/clerk/create-organization.mdx
+++ b/src/pages/reference-js/clerk/create-organization.mdx
@@ -3,116 +3,310 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# `createOrganization()`
+# Create Organization Component
 
-The `createOrganization` method is used to create an organization programatically.
+<Images alt="Create Organization Example" width={992} height={568} src="/images/ui-components/component-org_create.svg" />
 
+The `CreateOrganization` component is used to render an organization creation
+UI that allows users to create brand new organizations within you application.
 
-## Usage
+## `mountCreateOrganization()`
+
+Render the `CreateOrganization` component to an HTML `<div>` element.
+
+### Usage
 
 <CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
-```typescript {8}
-import Clerk from '@clerk/clerk-js';
+  ```typescript {15-19}
+  import Clerk from '@clerk/clerk-js';
+  import { dark } from "@clerk/themes";
 
-const clerk = new Clerk('pk_[publishable_key]');
-await clerk.load();
+  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
+    <div
+      id="create-organization"
+    ></div>
+  `;
 
-// ...
+  const createOrganizationComponent = document.querySelector<HTMLDivElement>('#create-organization')!;
 
-clerk.createOrganization({name: "Test", slug: "test"})
-```
-```html {12}
-<script>
-const script = document.createElement('script');
-script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-script.async = true;
-script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+  const clerk = new Clerk('pk_[publishable_key]');
+  await clerk.load();
 
-script.addEventListener('load', async function () {
-    await window.Clerk.load();
+  clerk.mountCreateOrganization(createOrganizationComponent, {
+    appearance: {
+      baseTheme: dark
+    }
+  });
+  ```
 
-    // ...
+  ```html {13-17}
+  <div id="create-organization"></div>
+  <script>
+    const script = document.createElement('script');
+    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
+    script.async = true;
+    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
 
-    clerk.createOrganization({name: "Test", slug: "test"})
-});
-document.body.appendChild(script);
-</script>
-```
+    script.addEventListener('load', async function () {
+      await window.Clerk.load();
+
+      const createOrganizationComponent = document.querySelector('#create-organization');
+
+      window.Clerk.mountCreateOrganization(createOrganizationComponent, {
+        appearance: {
+          baseTheme: dark
+        }
+      });
+    });
+    document.body.appendChild(script);
+  </script>
+  ```
 </CodeBlockTabs>
 
-## Typings
+### Props
 
 ```typescript
-function createOrganization({name, slug}: CreateOrganizationParams): Promise<OrganizationResource>;
+function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizationProps): void;
 ```
-
-### Props
 
 <Tables
   headings={["Name", "Type", "Description"]}
   rows={[
   {
   cells: [
-  <code>name</code>,
-  <code>string</code>,
-  "The name of the organization to be created.",
+  "node",
+  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
+  <>The <code>{`<div>`}</code> element used to render in the create-organization component</>
   ],
   },
   {
   cells: [
-  <code>slug?</code>,
-  <code>string</code>,
-  "The optional slug of the organization to be created.",
+  "props?",
+  <a href="#organizationprofileprops"><code>CreateOrganizationProps</code></a>,
+  "The properties to pass to the create-organization component",
   ],
   },
   ]}
 />
 
+## `unmountCreateOrganization`
 
-### Return Type
+Unmount and run cleanup on an existing CreateOrganization component instance.
 
-The following is returned from `createOrganization` wrapped inside of a `Promise`:
+### Usage
 
+<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+  ```typescript {19}
+  import Clerk from '@clerk/clerk-js';
 
-    {/* id: string;
-    name: string;
-    slug: string | null;
-    logoUrl: string | null;
-    imageUrl: string;
-    membersCount: number;
-    pendingInvitationsCount: number;
-    publicMetadata: OrganizationPublicMetadata;
-    createdAt: Date;
-    updatedAt: Date;
-    update: (params: UpdateOrganizationParams) => Promise<OrganizationResource>;
-    getMemberships: (params?: GetMembershipsParams) => Promise<OrganizationMembershipResource[]>;
-    getPendingInvitations: (params?: GetPendingInvitationsParams) => Promise<OrganizationInvitationResource[]>;
-    addMember: (params: AddMemberParams) => Promise<OrganizationMembershipResource>;
-    inviteMember: (params: InviteMemberParams) => Promise<OrganizationInvitationResource>;
-    inviteMembers: (params: InviteMembersParams) => Promise<OrganizationInvitationResource[]>;
-    updateMember: (params: UpdateMembershipParams) => Promise<OrganizationMembershipResource>;
-    removeMember: (userId: string) => Promise<OrganizationMembershipResource>;
-    destroy: () => Promise<void>;
-    setLogo: (params: SetOrganizationLogoParams) => Promise<OrganizationResource>; */}
+  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
+    <div
+      id="create-organization"
+    ></div>
+  `
 
-## Errors
+  const createOrganizationComponent = document.querySelector<HTMLDivElement>('#create-organization')!;
 
-There are a few errors you might run into when trying to use this method.
+  const clerk = new Clerk('pk_[publishable_key]');
 
-### 401 Auth Error
+  await clerk.load();
 
-If this method fails with a 401 request and the message:
+  clerk.mountCreateOrganization(createOrganizationComponent);
 
-```json
-{ "message": "Signed out", "long_message": "You are signed out", "code": "signed_out" }
+  // ...
+
+  clerk.unmountCreateOrganization(createOrganizationComponent);
+  ```
+
+  ```html {17}
+  <div id="create-organization"></div>
+  <script>
+    const script = document.createElement('script');
+    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
+    script.async = true;
+    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+
+    script.addEventListener('load', async function () {
+      await window.Clerk.load();
+
+      const createOrganizationComponent = document.querySelector('#create-organization');
+
+      window.Clerk.mountCreateOrganization(createOrganizationComponent);
+
+      // ...
+
+      window.Clerk.unmountCreateOrganization(createOrganizationComponent);
+    });
+    document.body.appendChild(script);
+  </script>
+  ```
+</CodeBlockTabs>
+
+### Props
+
+```typescript
+function unmountCreateOrganization(node: HTMLDivElement): void;
 ```
 
-Make sure your user is authenticated before attempting to run the `createOrganization` method.
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
+  {
+  cells: [
+  "node",
+  <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement"><code>HTMLDivElement</code></a>,
+  <>The container <code>{`<div>`}</code> element with a rendered create-organization component instance</>
+  ],
+  },
+  ]}
+/>
 
-### 403 Forbidden
+## `openCreateOrganization`
 
-Make sure you enable organizations in your Dashboard before using this method. If this feature it not enabled, you'll end up with the following error message:
+Opens the CreateOrganization component as an overlay at the root of your HTML `body` element.
 
-```json
-{ "message": "access denied", "long_message": "The organizations feature is not enabled for this instance. You can enable it at https://dashboard.clerk.com.", "code": "organization_not_enabled_in_instance" }
+### Usage
+
+<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+  ```typescript {7-11}
+  import Clerk from '@clerk/clerk-js';
+  import { dark } from "@clerk/themes";
+
+  const clerk = new Clerk('pk_[publishable_key]');
+  await clerk.load();
+
+  clerk.openCreateOrganization({
+    appearance: {
+      baseTheme: dark
+    }
+  });
+  ```
+
+  ```html {10-14}
+  <script>
+    const script = document.createElement('script');
+    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
+    script.async = true;
+    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+
+    script.addEventListener('load', async function () {
+      await window.Clerk.load();
+
+      window.Clerk.openCreateOrganization({
+        appearance: {
+          baseTheme: dark
+        }
+      });
+    });
+    document.body.appendChild(script);
+  </script>
+  ```
+</CodeBlockTabs>
+
+### Props
+
+```typescript
+function openCreateOrganization(props?: CreateOrganizationProps): void;
 ```
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
+  {
+  cells: [
+  "props?",
+  <a href="#organizationprofileprops"><code>CreateOrganizationProps</code></a>,
+  "The properties to pass to the create-organization component",
+  ],
+  },
+  ]}
+/>
+
+## `closeCreateOrganization`
+
+Closes the organization profile overlay.
+
+### Usage
+
+<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+  ```typescript {11}
+  import Clerk from '@clerk/clerk-js';
+  import { dark } from "@clerk/themes";
+
+  const clerk = new Clerk('pk_[publishable_key]');
+  await clerk.load();
+
+  clerk.openCreateOrganization();
+
+  // ...
+
+  clerk.closeCreateOrganization();
+  ```
+
+  ```html {14}
+  <script>
+    const script = document.createElement('script');
+    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
+    script.async = true;
+    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+
+    script.addEventListener('load', async function () {
+      await window.Clerk.load();
+
+      window.Clerk.openCreateOrganization();
+
+      // ...
+
+      window.Clerk.closeCreateOrganization();
+    });
+    document.body.appendChild(script);
+  </script>
+  ```
+</CodeBlockTabs>
+
+### Props
+
+```typescript
+function closeCreateOrganization(): void;
+```
+
+## `CreateOrganizationProps`
+
+All props below are optional.
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
+  {
+  cells: [
+  <code>afterCreateOrganizationUrl</code>,
+  <code>string</code>,
+  "Full URL or path to navigate after creating a new organization.",
+  ],
+  },
+  {
+  cells: [
+  <code>path</code>,
+  <code>string</code>,
+  "The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing.",
+  ],
+  },
+  {
+  cells: [
+  <code>routing</code>,
+  <code>RoutingStrategy</code>,
+  `The routing strategy for your pages. Supported values are:
+  - hash (default): Hash based routing.
+  - path: Path based routing.
+  - virtual: Virtual based routing.`,
+  ],
+  },
+  {
+  cells: [
+  <code>appearance</code>,
+  <code>object</code>,
+  "Control the look and feel of the component.",
+  ],
+  },
+  ]}
+/>
