--- a/src/pages/reference-js/organization-membership.mdx
+++ b/src/pages/reference-js/organization-membership.mdx
@@ -102,7 +102,7 @@ function update(updateParams: UpdateOrganizationMembershipParams): Promise<Organ
   rows={[
   {cells: [
   <code>Promise{"<"}<a href="/reference-js/organization-membership">OrganizationMembership</a>{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves to the <code>OrganizationMembership</code> for the updated membership.</>,
+  <>This method returns a <code>Promise</code> which resolves to the <code><a href="/reference-js/organization-membership">OrganizationMembership</a></code> for the updated membership.</>,
   ]},
   ]}
 />
