--- a/src/pages/quickstarts/clerk-idp.mdx
+++ b/src/pages/quickstarts/clerk-idp.mdx
@@ -34,6 +34,12 @@ curl
  -D {"callback_url":"https://oauth-client.com/oauth2/callback", "name": "oauth_app_1"}
 ```
 
+To create an OAuth Application that uses the authorization code flow with proof of key exchange (PKCE), set `public` to `true` in the POST request body.
+
+```
+{"callback_url":"https://oauth-public-client.com/oauth2/callback", "name": "oauth_app_pkce", "public": true}
+```
+
 Clerk creates an OAuth application and returns it's configurations back to you.
 
 
