docs: add upstream explanations for handle navigation

--- a/src/pages/reference-js/clerk/handle-navigation.mdx
+++ b/src/pages/reference-js/clerk/handle-navigation.mdx
@@ -16,6 +16,38 @@ function handleMagicLinkVerification(
 ): Promise<unknown>;
 ```
 
+Completes a magic link verification flow once we've reached the magic link results URL.
+
+When users click on magic links they get redirected to the URL that was provided during magic link verification flow initialization. The URL will contain a couple of important query parameters added by Clerk. These are called `__clerk_status` and `__clerk_created_session`.
+
+The `__clerk_status` query parameter is the outcome of the verification and can take three values: **verified**, **failed** or **expired**.
+
+The `__clerk_created_session` query parameter will hold the ID of the new session, if one was created as a result of the verification. Since the magic link can be opened at any device and not the one that originated the verification, the new session ID might not be available under [Client.sessions](https://clerk.com/docs/reference/clerkjs/client#sessions).
+
+Magic link flows can be completed on the same device that they were initiated or on a completely different browser. For example, a user might start the magic link flow on their desktop browser, but click on the magic link from their mobile phone.
+
+The `handleMagicLinkVerification()` method takes care of finalizing the magic link flow, depending on the verification outcome.
+
+Upon successful verification, the method will figure out if the sign in or sign up attempt was completed and redirect the user accordingly. As such, it accepts different parameters for the URL it should redirect when sign in/up is completed and the URL which it should redirect when the sign in/up attempt is still pending. Both parameters are optional, but you can provide them to the method up front. The final redirect will depend on the sign in/up attempt's status.
+
+Additionally, the `handleMagicLinkVerification()` method allows you to execute a callback if the successful verification happened on another device.
+
+In case the magic link verification wasn't successful, the `handleMagicLinkVerification()` method will throw a [`MagicLinkError`](https://clerk.com/docs/authentication/custom-flows/magic-links). You can check the error's `code` property to see if the magic link expired, or the verification simply failed.
+
+Take a look at the function parameters description below for more usage details.
+
+**Parameters**
+
+| Name   | Type                              | Description                                                  |
+| ------ | --------------------------------- | ------------------------------------------------------------ |
+| params | HandleMagicLinkVerificationParams | These props allow you to define the URLs where the user should be redirected to on successful verification and:completed sign in or sign up attempt.pending sign in or sign up attempt.If the magic link is successfully verified on another device, there's a callback function parameter that allows custom code execution. |
+
+**Returns**
+
+| Type           | Description                                                  |
+| -------------- | ------------------------------------------------------------ |
+| MagicLinkError | MagicLinkError This method will throw a MagicLinkError if the magic link verification failed or the link expired. Check the error's code property for details. |
+
 ## `handleRedirectCallback()`
 
 ```typescript
@@ -25,8 +57,18 @@ function handleRedirectCallback(
 ): Promise<unknown>;
 ```
 
+Completes a custom OAuth flow started by calling either [`SignIn.authenticateWithRedirect(params)`](https://clerk.com/docs/reference/clerkjs/signin) or [`SignUp.authenticateWithRedirect(params)`](https://clerk.com/docs/reference/clerkjs/signup)
+
+**Parameters**
+
+| Name   | Type                      | Description                                                  |
+| ------ | ------------------------- | ------------------------------------------------------------ |
+| params | HandleOAuthCallbackParams | Additional props that define where the user will be redirected to at the end of a successful OAuth flow. |
+
 ## `handleUnauthenticated()`
 
 ```typescript
 function handleUnauthenticated(opts?: { broadcast: boolean }): Promise<unknown>;
 ```
+
+Handles a 401 response from Frontend API by refreshing the client and session object accordingly
