chore: migrate to MDX tables

--- a/src/pages/reference-js/clerk/handle-navigation.mdx
+++ b/src/pages/reference-js/clerk/handle-navigation.mdx
@@ -36,17 +36,48 @@ In case the magic link verification wasn't successful, the `handleMagicLinkVerif
 
 Take a look at the function parameters description below for more usage details.
 
-**Parameters**
+### Props
 
-| Name   | Type                              | Description                                                  |
-| ------ | --------------------------------- | ------------------------------------------------------------ |
-| params | HandleMagicLinkVerificationParams | These props allow you to define the URLs where the user should be redirected to on successful verification and:completed sign in or sign up attempt.pending sign in or sign up attempt.If the magic link is successfully verified on another device, there's a callback function parameter that allows custom code execution. |
 
-**Returns**
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+  {
+  cells: [
+  <code>params</code>,
+  <code><a href="#handlemagiclinkverificationparams">HandleMagicLinkVerificationParams</a></code>,
+  <>Allows you to define the URLs where the user should be redirected to on successful verification and:
+  <ul><li>Completed sign in or sign up attempt.</li>
+  <li>Pending sign in or sign up attempt.</li>
+  </ul>
+  If the magic link is successfully verified on another device, there's a callback function parameter that allows custom code execution.</>,
+  ],
+  }
+    ,
+    {
+    cells: [
+    <code>customNavigate</code>,
+    <code>(to: string) {"=>"} Promise{"<"}unknown{">"}</code>,
+    <>Allows you to define a custom navigation function</>,
+    ],
+    }
+  ]}
+/>
 
-| Type           | Description                                                  |
-| -------------- | ------------------------------------------------------------ |
-| MagicLinkError | MagicLinkError This method will throw a MagicLinkError if the magic link verification failed or the link expired. Check the error's code property for details. |
+### Returns
+
+
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [
+  <code>Promise{"<"}unknown{">"}</code>,
+  <>This method will throw a <code><a href="/reference-js/types/magic-link-error">MagicLinkError</a></code> if the magic link verification failed or the link expired. Check the error's code property for details.</>,
+  ]},
+  ]}
+/>
 
 ## `handleRedirectCallback()`
 
@@ -59,11 +90,29 @@ function handleRedirectCallback(
 
 Completes a custom OAuth flow started by calling either [`SignIn.authenticateWithRedirect(params)`](https://clerk.com/docs/reference/clerkjs/signin) or [`SignUp.authenticateWithRedirect(params)`](https://clerk.com/docs/reference/clerkjs/signup)
 
-**Parameters**
+### Props
 
-| Name   | Type                      | Description                                                  |
-| ------ | ------------------------- | ------------------------------------------------------------ |
-| params | HandleOAuthCallbackParams | Additional props that define where the user will be redirected to at the end of a successful OAuth flow. |
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+  {
+  cells: [
+  <code>params</code>,
+  <code><a href="#handleoauthcallbackparams">HandleOAuthCallbackParams</a></code>,
+  <>Additional props that define where the user will be redirected to at the end of a successful OAuth flow.</>,
+  ],
+  }
+    ,
+    {
+    cells: [
+    <code>customNavigate</code>,
+    <code>(to: string) {"=>"} Promise{"<"}unknown{">"}</code>,
+    <>Allows you to define a custom navigation function</>,
+    ],
+    }
+  ]}
+/>
 
 ## `handleUnauthenticated()`
 
