chore: add full property links

--- a/src/pages/reference-js/clerk/handle-navigation.mdx
+++ b/src/pages/reference-js/clerk/handle-navigation.mdx
@@ -65,6 +65,36 @@ Take a look at the function parameters description below for more usage details.
   ]}
 />
 
+### `HandleMagicLinkVerificationParams`
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+  {
+  cells: [
+  <code>redirectUrlComplete</code>,
+  <code>string | undefined</code>,
+  <>Full URL or path to navigate after successful magic link verification on completed sign up or sign in on the same device.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>redirectUrl</code>,
+  <code>string | undefined</code>,
+  <>Full URL or path to navigate after successful magic link verification on the same device, but not completed sign in or sign up.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>onVerifiedOnOtherDevice</code>,
+  <code>{"() => void"}</code>,
+  <>Callback function to be executed after successful magic link verification on another device.</>,
+  ],
+  }
+  ]}
+/>
+
 ### Returns
 
 
@@ -111,6 +141,20 @@ Completes a custom OAuth flow started by calling either [`SignIn.authenticateWit
     <>Allows you to define a custom navigation function</>,
     ],
     }
+  ]}
+/>
+
+### `HandleOAuthCallbackParams`
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+    {cells: [<code>afterSignUpUrl</code>, <code>string | undefined | null</code>, <>Full URL or path to navigate after successful sign up.</>]},
+{cells: [<code>afterSignInUrl</code>, <code>string | undefined | null</code>, <>Full URL or path to navigate after successful sign in.</>]},
+{cells: [<code>redirectUrl</code>, <code>string | undefined | null</code>, <>Full URL or path to navigate after successful sign in or sign up.<br/>The same as setting afterSignInUrl and afterSignUpUrl to the same value.</>]},
+{cells: [<code>secondFactorUrl</code>, <code>string | undefined</code>, <>Full URL or path to navigate during sign in, if 2FA is enabled.</>]},
+{cells: [<code>continueSignUpUrl</code>, <code>string | undefined | null</code>, <>Full URL or path to navigate after an incomplete sign up.</>]}
   ]}
 />
 
